--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.1.2",
     "nodemailer": "^6.9.9"
   },
